2004-03-11 Stipe Tolj  <tolj@wapme-systems.de> 
    * wap/wsp_server_method_states.def: fixing bug where WSP 1.2 is simply 
      assumed while entering the WSP header packing, instead of using the
      "detected" WSP Encoding-Version that is available in the state 
      machine. Thanks to "Vjacheslav Chekushin" <slava@lmt.lv> for this.

2004-03-11 Stipe Tolj  <tolj@wapme-systems.de> 
    * gw/smsc/smsc_cimd2.c: fixing wrong parameter length for "service 
      description" field according to Nokia CIMD spec.
      Thanks to <dido@imperium.ph> for pointing to this.

2004-03-11 Stipe Tolj  <tolj@wapme-systems.de> 
    * gw/smsc/smsc_smpp.c: fixing race conditions amonst status and connect_time 
      while set in various threads. Thanks to Nisan for pointing to this. 
      [Msg-ID: <6.0.0.22.0.20040305000910.02f37008@amagoblin.ialien.co.za>] 
 
2004-03-11 Stipe Tolj  <tolj@wapme-systems.de> 
    * gw/smsc/smsc_cimd2.c: added more codes that return DLR_FAIL.  
      Thanks to "Arne K. Haaje" <haaje@eurobate.com> for this patch. 
      [Msg-ID: <200403101401.42854.haaje@eurobate.com>] 
 
2004-03-10  Alexander Malysh  <a.malysh@centrium.de> 
    * gw/shared.c: fixed bug that every part of splitted message has 
      the same UUID. Thanks a lot to "Robert Galach" <kanelek@tenbit.pl>. 
      Msg-Id: <00f701c40696$8168da10$320da8c0@tenbit.com>. 
 
2004-03-10  Alexander Malysh  <a.malysh@centrium.de> 
    * wap/cookies.c: applied patch from "Mindaugas Riauba" <mindaugas@bi.lt> 
      that fixed segfault. Thanks a lot to him. 
      Msg-Id: <02c601c40691$c9750310$f20214ac@bite.lt>. 
 
2004-03-10  Alexander Malysh  <a.malysh@centrium.de> 
    * gw/bb_alog.c: fixed bug introduced by last change that "%s" was not 
      passed to alog(...) call. Thanks to "Robert Galach" <kanelek@tenbit.pl> 
      for catching it. 
      Msg-Id: <004d01c4068d$d6058d60$320da8c0@tenbit.com>. 
 
2004-03-09  Alexander Malysh  <a.malysh@centrium.de> 